<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_above="@+id/addNewExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="33dp"
        android:paddingEnd="104dp"
        android:layout_marginBottom="61dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_name_hint"
            android:inputType="text"
            android:textColor="@color/colorEditTextExpense"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/priceExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_price_hint"
            android:inputType="text"
            android:textColor="@color/colorEditTextExpense"
            android:autofillHints="" />

    </LinearLayout>

    <TextView
        android:id="@+id/addNewExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/add_button_title"
        android:textColor="@color/colorActiveView"
        android:clickable="false"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/checkView"
        android:layout_width="19dp"
        android:layout_height="15dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:layout_toStartOf="@+id/addNewExpense"
        android:contentDescription="@string/check"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_baseline_check_24" />


</RelativeLayout>