<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtBalanceFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_finance_title"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="37dp"
        android:layout_marginStart="19dp"/>

    <TextView
        android:id="@+id/txtBalanceFinanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="67000"
        android:textSize="48sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinance"
        app:layout_constraintStart_toStartOf="@+id/txtBalanceFinance"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textSize="48sp"
        android:textColor="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/txtBalanceFinanceValue"
        app:layout_constraintTop_toTopOf="@+id/txtBalanceFinanceValue"/>

    <View
        android:id="@+id/dividerHorizFinance1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinanceValue"
        android:layout_marginTop="38dp"/>

    <LinearLayout
        android:id="@+id/llExpenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorizFinance1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llIncomes">

        <TextView
            android:id="@+id/txtBalanceExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textColor="@color/primaryTextColor"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/expenseTextViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5400"
                android:textSize="24sp"
                android:textColor="@color/expenseColor"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="24sp"
                android:textColor="@color/expenseColor"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIncomes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorizFinance1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llExpenses">

        <TextView
            android:id="@+id/txtBalanceIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="@color/primaryTextColor"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/incomeTextViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="74000"
                android:textSize="24sp"
                android:textColor="@color/incomeColor"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="24sp"
                android:textColor="@color/incomeColor"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/dividerHorizFinance2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"
        app:layout_constraintTop_toBottomOf="@+id/llExpenses" />

    <View
        android:id="@+id/dividerVertFinance"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/dividerColor"
        app:layout_constraintStart_toEndOf="@+id/llExpenses"
        app:layout_constraintTop_toTopOf="@+id/llExpenses"
        app:layout_constraintBottom_toBottomOf="@+id/llExpenses"/>

    <com.scorp.loftmoney.BalanceView
        android:id="@+id/balanceView"
        android:layout_width="184dp"
        android:layout_height="176dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorizFinance2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>